# hse-financial-tonality

./: README.md  pyproject.toml
notebooks/: data_analysis_category.ipynb  data_analysis_sentiment.ipynb  model_category.ipynb  model_sentiment.ipynb
src/: bert.py  engine.py  optim.py  train.py
