[tool.poetry]
name = "hse-financial-tonality"
version = "0.1.0"
description = ""
authors = ["AndBoyS <andboyxd@gmail.com>"]
readme = "README.md"
packages = [{include = "hse_financial_tonality"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.1"
tqdm = "^4.65.0"
scikit-learn = "^1.2.2"
ipykernel = "^6.23.1"
matplotlib = "^3.7.1"
mypy = "^1.3.0"
kaggle = "^1.5.13"
transformers = "^4.29.2"
torch = { url = "https://download.pytorch.org/whl/cu113/torch-1.12.1%2Bcu113-cp39-cp39-linux_x86_64.whl"}
torchaudio = { url = "https://download.pytorch.org/whl/cu113/torchaudio-0.12.1%2Bcu113-cp39-cp39-linux_x86_64.whl"}
torchvision = { url = "https://download.pytorch.org/whl/cu113/torchvision-0.13.1%2Bcu113-cp39-cp39-linux_x86_64.whl"}
jupyter = "^1.0.0"
lightgbm = "^3.3.5"
ipywidgets = "^8.0.6"
joblib = "^1.2.0"
seaborn = "^0.12.2"
openpyxl = "^3.1.2"
vadersentiment = "^3.3.2"
imbalanced-learn = "^0.10.1"
happytransformer = "^2.4.1"
tensorboard = "^2.13.0"
torch-tb-profiler = "^0.4.1"
focal-loss-torch = "^0.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line_length = 128
